Corrigir Bugs e Kafka Connection

--- a/Calculator/src/main/resources/application.properties
+++ b/Calculator/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-# Configuração do Kafka
 spring.kafka.bootstrap-servers=kafka:9092
+kafka.topic.response=calculator-responses
+kafka.topic.request=calculator-requests
 spring.kafka.consumer.group-id=calculator-group
 spring.kafka.consumer.auto-offset-reset=earliest
-
-# Tópico
-kafka.topic.request=calculator-requests
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
