--- a/Rest/src/main/resources/application.properties
+++ b/Rest/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-# Endereço do servidor Kafka
 spring.kafka.bootstrap-servers=kafka:9092
 
-# Tópicos do Kafka
+kafka.topic.response=calculator-responses
+management.endpoints.web.exposure.include=*
+
+spring.kafka.consumer.group-id=rest-group
+spring.kafka.consumer.auto-offset-reset=earliest
 kafka.topic.request=calculator-requests
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
