--- a/Rest/src/main/resources/application.properties
+++ b/Rest/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.kafka.bootstrap-servers=kafka:9092
 
 kafka.topic.response=calculator-responses
-management.endpoints.web.exposure.include=*
 
 spring.kafka.consumer.group-id=rest-group
 spring.kafka.consumer.auto-offset-reset=earliest
@@ -12,3 +11,12 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 springdoc.swagger-ui.path=/swagger-ui.html
+
+
+management.endpoint.health. show-details=always
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.server.port=8081
+management.endpoints.web.base-path=/actuator
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
