--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,17 @@ version: '3.8'
 
 services:
   zookeeper:
-    image: bitnami/zookeeper:latest
+    image: bitnami/zookeeper:3.8.3
     container_name: witproject-zookeeper
     ports:
       - "2181:2181"
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
+    volumes:
+      - zookeeper-data:/bitnami/zookeeper
 
   kafka:
-    image: bitnami/kafka:latest
+    image: bitnami/kafka:3.6.1
     container_name: witproject-kafka
     ports:
       - "9092:9092"
@@ -20,6 +22,8 @@ services:
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+    volumes:
+      - kafka-data:/bitnami/kafka
     depends_on:
       - zookeeper
 
@@ -44,27 +48,39 @@ services:
     container_name: witproject-rest
     ports:
       - "8084:8080"
-      - "8085:8081"  # Nova porta para métricas do Prometheus
+      - "8085:8081"
     environment:
       - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-      - MANAGEMENT_SERVER_PORT=8081  # Porta para endpoints do actuator
+      - MANAGEMENT_SERVER_PORT=8081
     depends_on:
       - kafka
 
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:v2.45.0
     container_name: witproject-prometheus
     ports:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
     depends_on:
       - rest
 
+  loki:
+    image: grafana/loki:2.9.3
+    container_name: witproject-loki
+    command: "-config.file=/etc/loki/config.yaml"
+    ports:
+      - "3100:3100"
+    volumes:
+      - ./config/loki-config.yaml:/etc/loki/config.yaml
+      - loki-data:/loki
+
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:10.2.3
     container_name: witproject-grafana
     ports:
       - "3000:3000"
@@ -72,9 +88,14 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
-      - grafana-storage:/var/lib/grafana
+      - grafana-data:/var/lib/grafana
     depends_on:
       - prometheus
+      - loki
 
 volumes:
-  grafana-storage:
+  zookeeper-data:
+  kafka-data:
+  prometheus-data:
+  grafana-data:
+  loki-data:
