--- a/Calculator/src/main/resources/application.properties
+++ b/Calculator/src/main/resources/application.properties
@@ -14,3 +14,7 @@ management.endpoint.health.show-details=always
 management.endpoints.web.base-path=/actuator
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+
+logging.level.root=INFO
+logging.level.org.example.Service=DEBUG
+
