--- a/Calculator/src/main/resources/application.properties
+++ b/Calculator/src/main/resources/application.properties
@@ -18,3 +18,6 @@ management.metrics.export.prometheus.enabled=true
 logging.level.root=INFO
 logging.level.org.example.Service=DEBUG
 
+APP_NAME=Calculator
+
+
