--- a/Rest/src/main/resources/application.properties
+++ b/Rest/src/main/resources/application.properties
@@ -16,7 +16,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 management.endpoint.health. show-details=always
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
-management.server.port=8081
+management.server.port=8082
 management.endpoints.web.base-path=/actuator
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+
+APP_NAME=Rest
